# quick

./: CMakeLists.txt  DESCRIPTION  README.md
include/: quick.h
sources/: quick.cpp
tests/: tets1.cpp
